--- a/styles/slick.css
+++ b/styles/slick.css
@@ -95,3 +95,13 @@
 .slick-arrow.slick-hidden {
   display: none;
 }
+
+@media screen and (max-width: 480px) {
+  .slick-slide {
+    display: none;
+    float: left;
+    padding: 5px;
+    height: 100%;
+    min-height: 1px;
+  }
+}
