--- a/styles/main.css
+++ b/styles/main.css
@@ -63,7 +63,6 @@ a {
   font-size: 15px;
   font-weight: 500;
   font-family: "Poppins", "Segoe UI", Tahoma !important;
-  height: 30px;
 }
 
 /* .article-poppins {
@@ -86,7 +85,7 @@ a {
   flex-direction: column;
 }
 .article-author-data p {
-  font-size: 11px;
+  font-size: 15px;
   color: var(--primary);
   font-family: "Poppins", Arial, Helvetica, sans-serif !important;
   font-weight: 600;
@@ -234,6 +233,12 @@ a {
 }
 
 @media screen and (max-width: 480px) {
+  .article-desc-home {
+    font-size: 6px;
+    font-weight: 500;
+    font-family: "Poppins", "Segoe UI", Tahoma !important;
+  }
+
   .article-desc {
     font-size: 4px;
     font-weight: 500;
@@ -255,6 +260,19 @@ a {
     align-items: center;
     gap: 0.4rem;
     /* padding: 0.3rem 0.4rem 0.3rem 0.4rem; */
+    border-radius: 2rem;
+    margin-top: auto !important;
+    /* margin-bottom: 0.5rem;
+  margin-inline: 0.4rem; */
+  }
+
+  .article-author-home {
+    width: max-content;
+    color: black;
+    display: flex;
+    align-items: center;
+    gap: 0.4rem;
+    padding: 0.3rem 0.4rem 0.3rem 0.4rem;
     border-radius: 2rem;
     margin-top: auto !important;
     /* margin-bottom: 0.5rem;
