--- a/styles/main.css
+++ b/styles/main.css
@@ -210,6 +210,20 @@ a {
   text-decoration: underline;
   color: var(--primary);
 }
+
+@-moz-document url-prefix() {
+  .dropcap {
+    color: var(--primary);
+    font-weight: 800;
+    font-size: 90px;
+    float: left;
+    line-height: 60px;
+    padding-top: 4px;
+    padding-right: 8px;
+    padding-left: 3px;
+  }
+}
+
 ::-webkit-scrollbar {
   width: 4px !important;
   background-color: transparent;
