--- a/styles/main.css
+++ b/styles/main.css
@@ -128,15 +128,15 @@ a {
 .article-preview b {
   font-weight: 800;
 }
-.article-preview::first-letter {
+/* .article-preview::first-letter {
   color: var(--primary);
   font-size: 6rem;
   font-weight: 900;
   float: left;
   line-height: 0.45;
-  /* margin-right: 0.5rem; */
+  
   margin: 0.1em 0.1em 0.2em 0;
-}
+} */
 .article-title {
   font-weight: 900 !important;
   transition: all 0.75s ease-in-out;
@@ -211,17 +211,18 @@ a {
   text-decoration: underline;
   color: var(--primary);
 }
+.dropcap {
+  color: var(--primary);
+  font-weight: 800;
+  font-size: 90px;
+  float: left;
+  line-height: 60px;
+  padding-top: 4px;
+  padding-right: 8px;
+  padding-left: 3px;
+}
 
 @-moz-document url-prefix() {
-  .article-preview::first-letter {
-    color: var(--primary);
-    font-size: 6rem;
-    font-weight: 900;
-    float: left;
-    line-height: 0.45;
-    /* margin-right: 0.5rem; */
-    margin: 0.1em 0.1em 0.2em 0;
-  }
   .dropcap {
     color: var(--primary);
     font-weight: 800;
