--- a/styles/main.css
+++ b/styles/main.css
@@ -53,7 +53,7 @@ a {
   color: white !important;
 }
 .article-container {
-  gap: 0.5rem;
+  /* gap: 0.5rem; */
 }
 .article-body {
   gap: 0.3rem;
@@ -85,9 +85,9 @@ a {
   display: flex;
   flex-direction: column;
 }
-.article-author-data p {
+.txt {
   font-size: 15px;
-  color: var(--primary);
+
   font-family: "Poppins", Arial, Helvetica, sans-serif !important;
   font-weight: 600;
 }
@@ -96,6 +96,13 @@ a {
   font-family: "Poppins", Arial, Helvetica, sans-serif !important;
   color: rgb(90, 90, 90);
 }
+
+.article-date-green {
+  font-size: 9px;
+  font-family: "Poppins", Arial, Helvetica, sans-serif !important;
+  color: rgb(255, 255, 255);
+}
+
 .sponsored .article-date {
   color: white;
 }
@@ -140,8 +147,17 @@ a {
 .article-title {
   font-weight: 900 !important;
   transition: all 0.75s ease-in-out;
-  color: var(--primary);
   line-height: 1.12 !important;
+  color: var(--primary);
+  /* font-family: "Righteous", "Poppins", Arial, Helvetica, sans-serif !important; */
+}
+
+.article-title-green {
+  font-weight: 900 !important;
+  transition: all 0.75s ease-in-out;
+  line-height: 1.12 !important;
+  color: white;
+
   /* font-family: "Righteous", "Poppins", Arial, Helvetica, sans-serif !important; */
 }
 .article-title:hover,
@@ -149,6 +165,17 @@ a {
   text-decoration: underline;
   text-underline-offset: 0.05em;
   text-decoration-color: #4fc049;
+  text-decoration-thickness: 5px !important;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.article-title-green:hover,
+.article-title-green:focus {
+  text-decoration: underline;
+  text-underline-offset: 0.05em;
+  text-decoration-color: white;
   text-decoration-thickness: 5px !important;
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -210,6 +237,10 @@ a {
 .about a {
   text-decoration: underline;
   color: var(--primary);
+}
+
+.green-body {
+  background-color: var(--primary);
 }
 
 @-moz-document url-prefix() {
@@ -304,9 +335,9 @@ a {
     display: flex;
     flex-direction: column;
   }
-  .article-author-data p {
+
+  .txt {
     font-size: 7px;
-    color: var(--primary);
     font-family: "Poppins", Arial, Helvetica, sans-serif !important;
     font-weight: 600;
   }
@@ -315,5 +346,11 @@ a {
     font-size: 5.5px;
     font-family: "Poppins", Arial, Helvetica, sans-serif !important;
     color: rgb(90, 90, 90);
+  }
+
+  .article-date-green {
+    font-size: 5.5px;
+    font-family: "Poppins", Arial, Helvetica, sans-serif !important;
+    color: rgb(255, 255, 255);
   }
 }
