--- a/styles/main.css
+++ b/styles/main.css
@@ -314,11 +314,27 @@ a {
   }
 }
 
+@media screen and (max-width: 1366px){
+  .txt{
+    font-size: 12.5px;
+    font-family: "Poppins", Arial, Helvetica, sans-serif !important;
+    font-weight: 600;
+
+  }
+
+}
+
 @media screen and (max-width: 1024px) {
   .article-desc {
     font-size: 10px;
     font-weight: 500;
     font-family: "Poppins", "Segoe UI", Tahoma !important;
+  }
+  .txt{
+    font-size: 12px;
+    font-family: "Poppins", Arial, Helvetica, sans-serif !important;
+    font-weight: 600;
+
   }
 }
 
