layout and article card styling

--- a/styles/main.css
+++ b/styles/main.css
@@ -179,41 +179,71 @@ a {
 }*/
 
 .article-title {
-  font-weight: 900 !important;
+  display: -webkit-box;
+  -webkit-box-orient:vertical;
+  overflow:hidden;
+  font-weight: 700 !important;
   transition: all 0.75s ease-in-out;
   line-height: 1.12 !important;
   color: var(--primary);
+  -webkit-line-clamp: 5;
+  max-height: 15rem;
+  
+
+  
   /* font-family: "Righteous", "Poppins", Arial, Helvetica, sans-serif !important; */
 }
 
 .article-title-green {
-  font-weight: 900 !important;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  font-weight: 700 !important;
   transition: all 0.75s ease-in-out;
   line-height: 1.12 !important;
   color: white;
+  -webkit-line-clamp:5;
+  
 
   /* font-family: "Righteous", "Poppins", Arial, Helvetica, sans-serif !important; */
 }
-.article-title:hover,
-.article-title:focus {
-  text-decoration: underline;
+.underline{
+  text-decoration:none;
+  background-image: linear-gradient(currentColor, currentColor);
+  background-repeat: no-repeat;
+  background-position: 0% 90%;
+  background-size:0% .4rem !important;
+  transition:background-size .6s ease-in !important;
+  will-change: background-size;
+
+
+}
+
+.article-title:hover .underline,
+.article-title:focus .underline{
+  
+  background-size: 100% .4rem !important;
+  
+  /*text-decoration: underline;
   text-underline-offset: 0.05em;
   text-decoration-color: #4fc049;
   text-decoration-thickness: 5px !important;
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
+  transition-duration: 150ms;*/
 }
 
-.article-title-green:hover,
-.article-title-green:focus {
-  text-decoration: underline;
+.article-title-green:hover .underline,
+.article-title-green:focus .underline{
+
+  background-size: 100% .4rem !important;
+  /*text-decoration: underline;
   text-underline-offset: 0.05em;
   text-decoration-color: white;
   text-decoration-thickness: 5px !important;
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
+  transition-duration: 150ms;*/
 }
 .article-title::before {
   /* content: ""; */
@@ -277,6 +307,11 @@ a {
   background-color: var(--primary);
 }
 
+.card-medium div .article-body .article-title,
+.card-medium div .article-body .article-title-green{
+  -webkit-line-clamp:3;
+}
+
 @-moz-document url-prefix() {
   .article-preview::first-letter {
     -moz-color: var(--primary);
@@ -311,12 +346,50 @@ a {
   }
 }
 
+
+
 @media screen and (max-width: 1024px) {
+
+  .cardList_ctnr{
+    grid-template-columns: repeat(auto-fit, 15.125rem);
+    gap: .625rem;
+    grid-auto-rows: 15.125rem;
+    
+    
+  }
   .article-desc {
     font-size: 10px;
     font-weight: 500;
     font-family: "Poppins", "Segoe UI", Tahoma !important;
   }
+  .article-title,
+  .article-title-green{
+    
+    max-height: 13.1rem;
+  }
+  .card-medium div .article-body .article-title,
+  .card-medium div .article-body .article-title-green{
+    -webkit-line-clamp:2;
+    max-height: 13.1rem;
+  }
+
+}
+@media screen and (max-width: 768px){
+  .cardList_ctnr{
+    grid-template-columns: repeat(auto-fit, 10.8215rem);
+    gap: .25rem;
+    grid-auto-rows: 10.8215rem;
+    
+    
+  }
+
+  .article-title,
+  .article-title-green{
+    -webkit-line-clamp: 4;
+    max-height: 11.2rem;
+  }
+  
+
 }
 
 @media screen and (max-width: 480px) {
@@ -333,7 +406,7 @@ a {
   }
 
   .article-title {
-    font-weight: 900 !important;
+    font-weight: 700 !important;
     transition: all 0.75s ease-in-out;
     color: var(--primary);
     line-height: 1 !important;
@@ -386,5 +459,13 @@ a {
     font-size: 5.5px;
     font-family: "Poppins", Arial, Helvetica, sans-serif !important;
     color: rgb(90, 90, 90);
+  }
+  .article-title,
+  .article-title-green{
+    
+    max-height: fit-content;
+    
+    line-height: 1.23 !important;
+    
   }
 }
