additional responsive sizing

--- a/styles/main.css
+++ b/styles/main.css
@@ -172,7 +172,7 @@ ol,ul {
 }
 .cardGrid__list{
   
-  max-height: 6049px;
+  /*max-height: 6049px;*/
   overflow-y: hidden;
 }
 .hv-toggle{
@@ -529,23 +529,7 @@ ol,ul {
   }
 
 }
-@media screen and (max-width: 768px){
-  .cardList_ctnr{
-    grid-template-columns: repeat(auto-fit, 11.8215rem);
-    gap: .65rem;
-    grid-auto-rows: 11.8215rem;
-    
-    
-  }
 
-  .article-title,
-  .article-title-green{
-    -webkit-line-clamp: 4;
-    max-height: 11.2rem;
-  }
-  
-
-}
 
 @media screen and (max-width: 480px) {
   .article-desc-home {
@@ -628,5 +612,61 @@ ol,ul {
   .article-title-green:focus .underline__span{
     background-size:100% .23rem !important;
   }
+
+}
+
+@media screen and (max-width: 380px){
+
+  .cardList_ctnr{
+    grid-template-columns: repeat(auto-fit, 10.1215rem);
+    gap: .45rem;
+    grid-auto-rows: 10.1215rem;
+    
+    
+    
+    
+  }
+  .article-title,
+  .article-title-green{
+    font-weight: 900 !important;
+    max-height: 6.25rem !important;
+    -webkit-line-clamp: 5;
+    line-height: 1.23 !important;
+    
+  }
+  .underline__span{
+    background-size: 0% .18rem !important;
+    
+   
+  }
+
+  .article-title-green:hover .underline__span,
+  .article-title-green:focus .underline__span{
+    background-size:100% .18rem !important;
+  }
+  .article-title:hover .underline__span,
+  .article-title:focus .underline__span{
+    background-size:100% .18rem !important;
+  }
+
+}
+
+@media screen and (max-width: 320px){
+
+  
+  .cardList_ctnr{
+    grid-template-columns: repeat(auto-fit, 8.1215rem);
+    gap: .45rem;
+    grid-auto-rows: 8.1215rem;
+    
+    
+    
+    
+  }
+  .author_img-ctnr{
+    width: 20px;
+    height: 20px;
+  }
+ 
 
 }
