--- a/styles/main.css
+++ b/styles/main.css
@@ -263,7 +263,7 @@ ol,ul {
   line-height: 1.18 !important;
   color: var(--primary);
   -webkit-line-clamp: 5;
-  max-height: 15rem;
+  max-height: fit-content;
   
 
   
@@ -527,6 +527,9 @@ ol,ul {
   .article-title-green:focus .underline__span{
     background-size: 100% .3rem !important;
   }
+  .article-title.rec__card{
+    -webkit-line-clamp: 6;
+  }
 
 }
 
@@ -600,6 +603,9 @@ ol,ul {
     -webkit-line-clamp: 5;
     line-height: 1.23 !important;
     
+  }
+  .article-title.rec__card{
+    -webkit-line-clamp: 6;
   }
   .underline__span{
     background-size: 0% .23rem !important;
