--- a/styles/main.css
+++ b/styles/main.css
@@ -495,6 +495,7 @@ ol,ul {
     --font-size:calc((1.95/2.25)*1.5rem);
     font-size: var(--font-size);
     line-height: calc(1.25*var(--font-size));
+    margin-bottom: 0.75rem;
   }
 
 }
